# korea_apocalypse

./: .gitignore  README.md  pyproject.toml
src/llm_chat_game/: context_var.py  gpt_agent.py  main.py  status_entity.py  util.py
src/llm_chat_game/story/: __init__.py  story.py  story_entity.py
src/llm_chat_game/story_db/: event_1.yaml  event_2.yaml  event_3.yaml  event_4.yaml  event_5.yaml  event_6.yaml  event_7.yaml  event_8.yaml  event_9.yaml  random_events.py
